// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table has aria-label on header columns 1`] = `
.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: inherit;
}

.c4 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        aria-label="column 1 aria label"
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        aria-label="column 2 aria label"
        class="c3"
        scope="col"
      />
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has clickable rows styles 1`] = `
.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5:focus {
  position: relative;
}

.c5:focus::after {
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
  content: '';
  height: calc(100% + 3px);
  left: 0;
  outline: none;
  position: absolute;
  top: -2px;
  width: 100%;
  z-index: 3;
}

.c5:hover {
  cursor: pointer;
}

.c5:hover td {
  background-color: #DBDEE1;
}

.c5:not(:hover) td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: inherit;
}

.c4 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
      role="button"
      tabindex="0"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
      role="button"
      tabindex="0"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
      role="button"
      tabindex="0"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has custom text alignment 1`] = `
.c6 {
  background-color: inherit;
}

.c6:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c6 td {
  background-color: inherit;
}

.c7 {
  background-color: inherit;
  text-align: right;
}

.c8 {
  background-color: inherit;
  text-align: center;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: right;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c4 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  text-align: center;
}

.c4:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: inherit;
}

.c5 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c4"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c5"
  >
    <tr
      class="c6"
      data-testid="table-row-0"
    >
      <td
        class="c7"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        World
      </td>
    </tr>
    <tr
      class="c6"
      data-testid="table-row-1"
    >
      <td
        class="c7"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c6"
      data-testid="table-row-2"
    >
      <td
        class="c7"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has desktop styles 1`] = `
.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: inherit;
}

.c4 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has error rows styles 1`] = `
.c5 {
  position: relative;
  background-color: #FAEAE9;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5::after {
  box-shadow: inset 0 0 0 1px #CD2C23;
  content: '';
  height: calc(100% + 1px);
  left: 0;
  outline: none;
  position: absolute;
  width: 100%;
  z-index: 3;
}

.c5 td:first-child::after {
  border-left: 1px solid #CD2C23;
  content: '';
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  z-index: 3;
}

.c5 td {
  background-color: inherit;
}

.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: inherit;
}

.c4 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has mobile styles 1`] = `
.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-2x) 0;
}

.c0 td {
  padding: var(--spacing-3x) 0;
}

.c0 th,
.c0 td {
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: inherit;
}

.c4 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has rowNumbers styles 1`] = `
.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c7 {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  margin-left: 50%;
  min-width: var(--size-2halfx);
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: var(--size-2halfx);
}

.c1 {
  background: inherit;
}

.c4 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3 eq-table__util-column"
        scope="col"
      />
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
      >
        <span
          class="c7"
        >
          1
        </span>
      </td>
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
    >
      <td
        class="c6"
      >
        <span
          class="c7"
        >
          2
        </span>
      </td>
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
      >
        <span
          class="c7"
        >
          3
        </span>
      </td>
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has selectable rows styles 1`] = `
.c13 {
  background-color: inherit;
}

.c13:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c13 td {
  background-color: inherit;
}

.c14 {
  background-color: inherit;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c9 {
  color: #FFFFFF;
  display: none;
  height: 100%;
  left: 0;
  position: absolute;
  width: 100%;
}

.c11 {
  color: #FFFFFF;
  display: none;
  height: 100%;
  left: 0;
  position: absolute;
  width: 100%;
}

.c7 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: inline-block;
  height: var(--size-1x);
  left: 0;
  margin-right: var(--spacing-1x);
  position: relative;
  width: var(--size-1x);
}

.c7:hover {
  background-color: #DBDEE1;
  border: 1px solid #1B1C1E;
}

.c5 {
  height: 0;
  opacity: 0;
  position: absolute;
  width: 0;
}

.c5:checked + .c6 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c5:checked + .c6 > .c8 {
  display: block;
}

.c5:indeterminate + .c6 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c5:indeterminate + .c6 > .c10 {
  display: block;
}

.c5:focus + .c6 {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4:not(:first-of-type) {
  margin-top: var(--spacing-1x);
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: inherit;
}

.c12 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3 eq-table__util-column"
        scope="col"
      >
        <label
          class="c4"
        >
          <input
            class="c5"
            data-testid="row-checkbox-all"
            type="checkbox"
          />
          <span
            class="c6 c7"
          >
            <svg
              class="c8 c9"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
        </label>
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c12"
  >
    <tr
      class="c13"
      data-testid="table-row-0"
    >
      <td
        class="c14"
      >
        <label
          class="c4"
        >
          <input
            class="c5"
            data-testid="row-checkbox-0"
            type="checkbox"
          />
          <span
            class="c6 c7"
          >
            <svg
              class="c8 c9"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
        </label>
      </td>
      <td
        class="c14"
      >
        Hello
      </td>
      <td
        class="c14"
      >
        World
      </td>
    </tr>
    <tr
      class="c13"
      data-testid="table-row-1"
    >
      <td
        class="c14"
      >
        <label
          class="c4"
        >
          <input
            class="c5"
            data-testid="row-checkbox-1"
            type="checkbox"
          />
          <span
            class="c6 c7"
          >
            <svg
              class="c8 c9"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
        </label>
      </td>
      <td
        class="c14"
      >
        Hello
      </td>
      <td
        class="c14"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c13"
      data-testid="table-row-2"
    >
      <td
        class="c14"
      >
        <label
          class="c4"
        >
          <input
            class="c5"
            data-testid="row-checkbox-2"
            type="checkbox"
          />
          <span
            class="c6 c7"
          >
            <svg
              class="c8 c9"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
            <svg
              class="c10 c11"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
        </label>
      </td>
      <td
        class="c14"
      >
        Hello
      </td>
      <td
        class="c14"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has small rowSize styles 1`] = `
.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-half) var(--spacing-1x);
}

.c0 td {
  padding: var(--spacing-1x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: inherit;
}

.c4 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has sorting styles 1`] = `
.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7 td {
  background-color: inherit;
}

.c8 {
  background-color: inherit;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: inherit;
  text-align: left;
}

.c4:focus {
  outline: none;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c5 {
  margin-left: var(--spacing-1x);
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: inherit;
}

.c6 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        aria-sort="ascending"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 1
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
      <th
        aria-sort="none"
        class="c3"
        scope="col"
      >
        <button
          class="c4"
        >
          Column 2
          <svg
            class="c5"
            color="#60666E"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class="c6"
  >
    <tr
      class="c7"
      data-testid="table-row-0"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-2"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c8"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has sticky column styles 1`] = `
.c7 {
  background-color: inherit;
}

.c7:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c7 td {
  background-color: inherit;
}

.c8 {
  background-color: inherit;
  left: 0px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 2;
}

.c9 {
  background-color: inherit;
  left: 75px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 2;
}

.c10 {
  background-color: inherit;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  left: 0px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 5;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c4 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
  left: 75px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 5;
}

.c4:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c5 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c5:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: inherit;
}

.c6 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c4"
        scope="col"
      >
        Column 2
      </th>
      <th
        class="c5"
        scope="col"
      >
        Column 3
      </th>
    </tr>
  </thead>
  <tbody
    class="c6"
  >
    <tr
      class="c7"
      data-testid="table-row-0"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c9"
      >
        Big
      </td>
      <td
        class="c10"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-1"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c9"
      >
        Big
      </td>
      <td
        class="c10"
      >
        World
      </td>
    </tr>
    <tr
      class="c7"
      data-testid="table-row-2"
    >
      <td
        class="c8"
      >
        Hello
      </td>
      <td
        class="c9"
      >
        Big
      </td>
      <td
        class="c10"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has sticky header styles 1`] = `
.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 6;
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: inherit;
}

.c4 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has striped styles 1`] = `
.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5:nth-child(odd) {
  background-color: #FAFAFA;
}

.c5 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: inherit;
}

.c4 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has tablet styles 1`] = `
.c5 {
  background-color: inherit;
}

.c5:not(:first-child) {
  border-top: 1px solid #DBDEE1;
}

.c5 td {
  background-color: inherit;
}

.c6 {
  background-color: inherit;
}

.c3 {
  background-color: inherit;
  box-sizing: border-box;
  position: relative;
}

.c3:before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  position: absolute;
  right: 0;
  width: 100%;
}

.c2 {
  background-color: inherit;
}

.c0 {
  background: #FFFFFF;
  border-collapse: collapse;
  color: #1B1C1E;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-2x) var(--spacing-1x);
}

.c0 td {
  padding: var(--spacing-3x) var(--spacing-1x);
}

.c0 th,
.c0 td {
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 0;
  text-align: left;
}

.c0 th:last-child,
.c0 td:last-child {
  border-right: 0;
}

.c0 .eq-table__util-column {
  width: 1px;
}

.c1 {
  background: inherit;
}

.c4 {
  background: inherit;
}

<table
  class="c0"
>
  <thead
    class="c1"
  >
    <tr
      class="c2"
    >
      <th
        class="c3"
        scope="col"
      >
        Column 1
      </th>
      <th
        class="c3"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    class="c4"
  >
    <tr
      class="c5"
      data-testid="table-row-0"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        World
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-1"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c5"
      data-testid="table-row-2"
    >
      <td
        class="c6"
      >
        Hello
      </td>
      <td
        class="c6"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;
